feat(random-picker): add wheelofnames-style spinning wheel with multiple modes
- Add spinning wheel visualization with CSS animation
- Add three modes: Names (wheel), Numbers (range), Quick presets
- Add crypto-based randomness for fair picks
- Add results history with localStorage persistence
- Add Quick presets: Yes/No, Coin flip, d6/d20 dice

--- a/components/tools/random-picker/i18n/en.json
+++ b/components/tools/random-picker/i18n/en.json
@@ -1,4 +1,36 @@
 {
-  "name": "Random Picker & Groups",
-  "description": "Draw winners or split names into random teams."
+  "name": "Random Picker",
+  "description": "Spin the wheel to pick random winners, numbers, or make quick decisions.",
+  "modes": {
+    "names": "Names",
+    "numbers": "Numbers",
+    "quick": "Quick"
+  },
+  "names": {
+    "input": "Enter names (one per line)",
+    "placeholder": "Alice\nBob\nCharlie\nDiana"
+  },
+  "numbers": {
+    "start": "Start",
+    "end": "End",
+    "pickCount": "Pick count"
+  },
+  "quick": {
+    "yesno": "Yes / No",
+    "coin": "Coin Flip",
+    "d6": "Dice (d6)",
+    "d20": "Dice (d20)"
+  },
+  "wheel": {
+    "spin": "Spin",
+    "spinning": "Spinning...",
+    "noEntries": "Add entries to spin"
+  },
+  "results": {
+    "title": "History",
+    "clear": "Clear",
+    "empty": "No results yet",
+    "copy": "Copy"
+  },
+  "fairness": "Uses cryptographically secure randomness for fair picks."
 }
