feat(random-picker): add 3D dice, CSS coin flip, and spin-wheel integration
- Integrate spin-wheel library for canvas-based wheel animation
- Add @3d-dice/dice-box for 3D physics dice (d6/d20)
- Add CSS 3D coin flip with heads/tails animation
- Add Web Audio API sound effects for all modes
- Fix coin flip to show correct result after animation
- Fix dice unmount error when switching modes
- Add TypeScript declarations for spin-wheel and dice-box

--- a/components/tools/random-picker/i18n/en.json
+++ b/components/tools/random-picker/i18n/en.json
@@ -26,11 +26,20 @@
     "spinning": "Spinning...",
     "noEntries": "Add entries to spin"
   },
+  "dice": {
+    "roll": "Roll",
+    "rolling": "Rolling..."
+  },
+  "coin": {
+    "flip": "Flip",
+    "flipping": "Flipping...",
+    "heads": "Heads",
+    "tails": "Tails"
+  },
   "results": {
     "title": "History",
     "clear": "Clear",
     "empty": "No results yet",
     "copy": "Copy"
-  },
-  "fairness": "Uses cryptographically secure randomness for fair picks."
+  }
 }
